CANDIDATE/ApplicantEnvironment/rest/default/objects/ServerInfo__mdt/ServerInfo__mdt.object-meta.xml
<CustomObject>
    <label>ServerInfo</label>
    <pluralLabel>ServerInfos</pluralLabel>
</CustomObject>