CANDIDATE/ApplicantEnvironment/rest/default/objects/ServerInfo__mdt/fields/LoginUrl__c.field-meta.xml
<CustomField>
    <fullName>LoginUrl__c</fullName>
    <label>LoginUrl</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>