CANDIDATE/ApplicantEnvironment/rest/default/objects/ServerInfo__mdt/fields/ServerUrl__c.field-meta.xml
<CustomField>
    <fullName>ServerUrl__c</fullName>
    <description>Link to Experience Site</description>
    <label>ServerUrl</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>